2009-02-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c, capplet/capplet-utils.h:
	Add a simple comment and update header file.
	* capplet/nwam_location_dialog.c: (on_button_clicked):
	Select new object after add it
	* capplet/nwam_vpn_pref_dialog.c: (apply), (response_cb),
	(vpn_pref_clicked_cb), (nwam_vpn_selection_changed):
	Add code to sync model and enm list. And select new object after add it.
	* capplet/nwam_tree_view.h:
	Updated header file

2009-02-03  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  Change WIFI Fav list to be closer to UI Spec.
	* capplet/nwam_net_conf_panel.c: 
	  Ensure that the rules button correctly reflects the selected
	  NCU's activation mode.
	* common/nwamui_wifi_net.h, common/nwamui_wifi_net.c:
	  Add nwamui_wifi_net_convert_strength_to_string() to provide ability
	  to get a translated string for the signal strength, in one place.
	  Add nwamui_wifi_net_get_signal_strength_string() as a convenience
	  function to get signal string.
	* common/nwamui_ncu.c: 
	  Make nwamui_ncu_get_signal_strength_string use 
	  nwamui_wifi_net_convert_strength_to_string() to get a string
	  representation for the signal strength (to do in 1 place).

2009-02-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c: (capplet_list_store_add),
	(tree_model_find_object_cb), (capplet_model_get_iter),
	(capplet_model_foreach_add_to_list), (capplet_model_to_list):
	Added function to get iter from object
	* capplet/nwam_conn_conf_ip_panel.c:
	(nwam_compose_multi_ip_tree_view), (apply):
	Make this panel do things when ok is clicked.
	* capplet/nwam_location_dialog.c:
	(nwam_location_dialog_class_init), (nwam_compose_tree_view),
	(nwam_location_dialog_init), (on_button_clicked):
	Updated due to nwam tree view changes.
	* capplet/nwam_tree_view.c: (nwam_tree_view_class_init),
	(nwam_tree_view_set_property), (nwam_tree_view_get_property),
	(nwam_tree_view_init), (on_button_clicked),